Base64 Fix
+ Base64 class
~ Implementation replaces DatatypeConverter