@@ -1,8 +1,7 @@
 package com.wrapper.spotify.requests.authorization;
 
+import com.wrapper.spotify.Base64;
 import com.wrapper.spotify.requests.AbstractRequest;
-
-import javax.xml.bind.DatatypeConverter;
 
 public abstract class AbstractAthorizationRequest extends AbstractRequest {
   protected AbstractAthorizationRequest(final Builder builder) {
@@ -18,7 +17,7 @@ public abstract class AbstractAthorizationRequest extends AbstractRequest {
       assert (!clientId.equals(""));
       assert (!clientSecret.equals(""));
 
-      setHeader("Authorization", "Basic " + DatatypeConverter.printBase64Binary((clientId + ":" + clientSecret).getBytes()));
+      setHeader("Authorization", "Basic " + Base64.encode((clientId + ":" + clientSecret).getBytes()));
     }
   }
 }
